Feature/vulnerability (#5)
* Adding handler of management of vulnerability

* Adding route for list all vulnerabilities

* Fix swagger and start use cases on vulnerability

* Updating swagger and tests

* Adding more unit tests

* Adding new route of update vulnerability

* Fix swagger

* Fix middleware

* Fix pipeline

* Fix pipeline
