# vulnerability/internal/router/router.go
@@ -1,11 +1,15 @@
 package router
 
 import (
+	"github.com/ZupIT/horusec-devkit/pkg/services/middlewares"
+
 	"github.com/ZupIT/horusec-platform/vulnerability/docs"
 	"github.com/ZupIT/horusec-platform/vulnerability/internal/handlers/health"
+	"github.com/ZupIT/horusec-platform/vulnerability/internal/handlers/vulnerability"
+
+	"github.com/go-chi/chi"
 
 	"github.com/ZupIT/horusec-platform/vulnerability/internal/router/enums"
-	"github.com/go-chi/chi"
 
 	"github.com/ZupIT/horusec-devkit/pkg/services/swagger"
 
@@ -19,14 +23,19 @@ type IRouter interface {
 type Router struct {
 	http.IRouter
 	swagger.ISwagger
-	healthHandler *health.Handler
+	middlewares.IAuthzMiddleware
+	healthHandler          *health.Handler
+	vulnerabilitiesHandler *vulnerability.Handler
 }
 
-func NewHTTPRouter(router http.IRouter, healthHandler *health.Handler) IRouter {
+func NewHTTPRouter(router http.IRouter, authzMiddleware middlewares.IAuthzMiddleware, healthHandler *health.Handler,
+	vulnerabilitiesHandler *vulnerability.Handler) IRouter {
 	routes := &Router{
-		IRouter:       router,
-		ISwagger:      swagger.NewSwagger(router.GetMux(), enums.DefaultPort),
-		healthHandler: healthHandler,
+		IRouter:                router,
+		IAuthzMiddleware:       authzMiddleware,
+		ISwagger:               swagger.NewSwagger(router.GetMux(), enums.DefaultPort),
+		healthHandler:          healthHandler,
+		vulnerabilitiesHandler: vulnerabilitiesHandler,
 	}
 	return routes.setRoutes()
 }
@@ -34,6 +43,7 @@ func NewHTTPRouter(router http.IRouter, healthHandler *health.Handler) IRouter {
 func (r *Router) setRoutes() IRouter {
 	r.routerHealth()
 	r.routerSwagger()
+	r.routerVulnerabilities()
 	return r
 }
 
@@ -41,6 +51,14 @@ func (r *Router) routerHealth() {
 	r.Route(enums.HealthRouter, func(router chi.Router) {
 		router.Options("/", r.healthHandler.Options)
 		router.Get("/", r.healthHandler.Get)
+	})
+}
+
+func (r *Router) routerVulnerabilities() {
+	r.Route(enums.ManagementVulnerabilitiesRouter, func(router chi.Router) {
+		router.Options("/", r.vulnerabilitiesHandler.Options)
+		router.With(r.IsRepositoryMember).Get("/{repositoryID}", r.vulnerabilitiesHandler.Get)
+		router.With(r.IsRepositoryAdmin).Patch("/{vulnerabilityID}", r.vulnerabilitiesHandler.Patch)
 	})
 }
 
